[gd_scene load_steps=5 format=3 uid="uid://6gl2a23avbeo"]

[ext_resource type="Script" path="res://main.gd" id="1_6svub"]
[ext_resource type="PackedScene" uid="uid://bxuwpp6ryg633" path="res://Peg.tscn" id="2_8tkvw"]
[ext_resource type="PackedScene" uid="uid://ctkhpxiatx6wx" path="res://Player.tscn" id="3_s131w"]
[ext_resource type="FontFile" uid="uid://bt28q3xjlwnpm" path="res://Xolonium-Regular.ttf" id="4_3v46p"]

[node name="Main" type="Node"]
script = ExtResource("1_6svub")
peg_scene = ExtResource("2_8tkvw")
speed = 350

[node name="Player" parent="." instance=ExtResource("3_s131w")]
position = Vector2(1388, 653)
metadata/_edit_group_ = true

[node name="E_Spawn" type="Node2D" parent="."]
position = Vector2(771, -64)

[node name="A_Spawn" type="Node2D" parent="."]
position = Vector2(899, -64)

[node name="G_Spawn" type="Node2D" parent="."]
position = Vector2(1027, -64)

[node name="D_Spawn" type="Node2D" parent="."]
position = Vector2(1155, -64)

[node name="B_Spawn" type="Node2D" parent="."]
position = Vector2(1283, -64)

[node name="HIGH_E_Spawn" type="Node2D" parent="."]
position = Vector2(1411, -64)

[node name="Note_Spawn_Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 1584.0
offset_top = 968.0
offset_right = 1848.0
offset_bottom = 1048.0
theme_override_fonts/font = ExtResource("4_3v46p")
theme_override_font_sizes/font_size = 64
text = "SCORE:"

[node name="ScoreValue" type="Label" parent="."]
offset_left = 1864.0
offset_top = 968.0
offset_right = 2128.0
offset_bottom = 1048.0
theme_override_fonts/font = ExtResource("4_3v46p")
theme_override_font_sizes/font_size = 64
text = "0"

[connection signal="string_pluck" from="Player" to="." method="_on_player_string_pluck"]
[connection signal="timeout" from="Note_Spawn_Timer" to="." method="_on_note_spawn_timer_timeout"]
